--- a/app/templates/user_home.html
+++ b/app/templates/user_home.html
@@ -8,8 +8,6 @@
 </head>
 
 <body>
-
-
     <nav>
         <a href="">Home</a>
     </nav>
@@ -21,12 +19,11 @@
     </div>
 
     <form action="/submit_books" method="POST">
-        <label for="books">Enter your books</label><br>
+        <label for="books">Enter your books (comma seperated please) ! </label><br>
         <input type="text" id="books" name="books"><br><br>
         <input type="submit" value="Submit">
     </form>
 
 </body>
-
 
 </html>
