reccomendation system renders in API

--- a/app/templates/user_home.html
+++ b/app/templates/user_home.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <p class="welcome">
-            Wlcome to the Reccomendation system {{user.name}}!!
+            Welcome to the Reccomendation system {{user.name}}!!
         </p>
     </div>
 
