updated AI branch

--- a/app/templates/book_detail.html
+++ b/app/templates/book_detail.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/static/book_details.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Book Detail</title>
 </head>
 <body>
-    {{book}}
-    
+    <div class="container">
+        <h1>Book: {{ book }}</h1>
+        <p>{{ bot_response }}</p>
+    </div>
 </body>
 </html>
+
+
