--- a/app/static/books.css
+++ b/app/static/books.css
@@ -1,32 +1,70 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-    padding: 0;
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 20px;
     background-color: #f0f0f0;
+    color: #333;
 }
+
 .container {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    background-color: white;
+    background-color: #fff;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
+
+h1, h2 {
+    color: #333;
+    text-align: center;
+    margin-bottom: 20px;
+    
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+ul h2 {
+    background-color: #e9e9e9;
+    margin: 5px 0;
+    padding: 10px;
+    border-radius: 4px;
+    text-align: center;
+    font-size: 22px;
+    color: #003366;
+    letter-spacing: 2px;
+    
+    
+}
+
 .book {
     background-color: #e0e0e0;
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 10px;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 15px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
 }
+
+
 .book h2 {
     margin: 0;
-    font-size: 18px;
+    font-size: 20px;
+    color: #444;
 }
+
+
 .book a {
     text-decoration: none;
-    color: black;
+    color: #007BFF;
+    transition: color 0.3s ease;
 }
+
 .book a:hover {
-    text-decoration: underline;
+    color: #0056b3;
+    text-decoration:none
 }
+
